--- a/db_project/staff/templates/staff/excel.html
+++ b/db_project/staff/templates/staff/excel.html
@@ -15,30 +15,29 @@
         <div><h6>or</h6></div>
     </div>
     <h3>Enter details of new user </h3>
-    <form method="post" class="login_form"  id ="personForm" data-cities-url="{% url 'ajax_load_cities' %}" novalidate>
-        {% csrf_token %}
-        {{ user_form.as_p }}
+<form method="post" id="personForm" data-cities-url2="{% url 'ajax_load_cities' %}">
+{% csrf_token %}
+{{ user_form.as_p }}
 
         <div>
   <button type="submit" class="btn btn-primary">Submit</button>
-<div>
+</div>
 </form>
-<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-<script>
-  $("#id_state").change(function () {
-    var url = $("#personForm").attr("data-cities-url");  // get the url of the `load_cities` view
-    var stateId = $(this).val();  // get the selected country ID from the HTML input
 
-    $.ajax({                       // initialize an AJAX request
-      url: url,                    // set the url of the request (= localhost:8000/hr/ajax/load-cities/)
-      data: {
-        'state': stateId       // add the country id to the GET parameters
-      },
-      success: function (data) {   // `data` is the return of the `load_cities` view function
-        $("#id_city").html(data);  // replace the contents of the city input with the data that came from the server
-      }
+ <!-- <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+ <script>
+   $("#id_state").change(function () {
+     var url = $("#personForm").attr("data-cities-url2");  // get the url of the `load_cities` view
+     var stateId = $(this).val();  // get the selected state ID from the HTML input
+     $.ajax({                       // initialize an AJAX request
+       url: url,                    // set the url of the request (= localhost:8000/hr/ajax/load-cities/)
+       data: {
+         'state': stateId       // add the state id to the GET parameters
+       },
+       success: function (data) {  // `data` is the return of the `load_cities` view function
+          $("#id_city").html(data);  // replace the contents of the city input with the data that came from the server
+        }
+      });
     });
-
-  });
-</script>
+  </script> -->
 {% endblock %}
