--- a/db_project/staff/templates/staff/dber_mail.html
+++ b/db_project/staff/templates/staff/dber_mail.html
@@ -11,10 +11,10 @@
 
 </div>
 <div>
-        <h3>login</h3>
+        <h3>Send Mail</h3>
 <form method="post" class="login_form">
     {% csrf_token %}
-    {{ l_form.as_p }}
+    {{form.as_p }}
 </div>
 
   <button type="submit" class="btn btn-primary">Submit</button>
