--- a/db_project/staff/templates/staff/new_password.html
+++ b/db_project/staff/templates/staff/new_password.html
@@ -11,7 +11,7 @@
 
 </div>
 <div>
-        <h3>login</h3>
+        <h3>Change Password</h3>
 <form method="post" class="login_form">
     {% csrf_token %}
     {{ l_form.as_p }}
