--- a/db_project/staff/templates/staff/register.html
+++ b/db_project/staff/templates/staff/register.html
@@ -16,7 +16,7 @@
     {% csrf_token %}
     {{ r_form.as_p }}
 </div>
-
+<div>
   <button type="submit" class="btn btn-primary">Submit</button>
 </div>
 </form>
