--- a/db_project/staff/templates/staff/base.html
+++ b/db_project/staff/templates/staff/base.html
@@ -8,10 +8,25 @@
     </head>
     <body>
         <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
-              <a class="navbar-brand" href="$">DB PORTAL</a>
+              <a class="navbar-brand" href="{%url 'home-page' %}">DB PORTAL</a>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
+              <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+     <li class="nav-item active">
+       <a class="nav-link" href="{%url 'dber-logout' %}">LogOut <span class="sr-only">(current)</span></a>
+     </li>
+     {% if user.is_staff == True %}
+     <li class="nav-item active">
+       <a class="nav-link" href="{%url 'staff_mail' %}">Mail <span class="sr-only">(current)</span></a>
+     </li>
+     {% endif %}
+     {% if user.is_staff == False %}
+     <li class="nav-item active">
+       <a class="nav-link" href="{%url 'dber_mail' %}">Mail <span class="sr-only">(current)</span></a>
+     </li>
+     {% endif %}
+ </ul>
 
               </nav>
 
