--- a/db_project/templates/login.html
+++ b/db_project/templates/login.html
@@ -1,4 +1,4 @@
-{% extends 'staff/base.html' %}
+{% extends 'base.html' %}
 
 
 {% block content %}
@@ -11,7 +11,7 @@
 
 </div>
 <div>
-        <h3>Change Password</h3>
+        <h3>login</h3>
 <form method="post" class="login_form">
     {% csrf_token %}
     {{ l_form.as_p }}
