--- a/db_project/templates/register.html
+++ b/db_project/templates/register.html
@@ -1,4 +1,4 @@
-{% extends 'staff/base.html' %}
+{% extends 'base.html' %}
 
 
 {% block content %}
@@ -11,12 +11,12 @@
 
 </div>
 <div>
-        <h3>Send Mail</h3>
+        <h3>Register Here</h3>
 <form method="post" class="login_form">
     {% csrf_token %}
-    {{form.as_p }}
+    {{ r_form.as_p }}
 </div>
-
+<div>
   <button type="submit" class="btn btn-primary">Submit</button>
 </div>
 </form>
